--- a/content/20170109-2.md
+++ b/content/20170109-2.md
@@ -1,4 +1,4 @@
-Title: 期末整理
+Title: aaa期末整理
 Date: 2016-12-26 12:00
 Category: Course
 Tags: Brython
@@ -17,6 +17,8 @@ window.onload=function(){
 brython(1);
 }
 </script>
+
+<!-- 以下實際利用  Brython 畫圖 -->
 
 w15 製作按鈕
 
