--- a/content/20170109-2.md
+++ b/content/20170109-2.md
@@ -20,16 +20,14 @@ brython(1);
 
 <!-- 以下實際利用  Brython 畫圖 -->
 
-w15 製作按鈕
+<a href="https://s40523230.github.io/2016fallcp_hw/blog/w18-1.html">製作按鈕</a>
 
-https://s40523230.github.io/2016fallcp_hw/blog/w18-1.html
 
-w16 猜數字遊戲
 
-https://s40523230.github.io/2016fallcp_hw/blog/w18-2.html
+<a href="https://s40523230.github.io/2016fallcp_hw/blog/w18-2.html">w16 猜數字遊戲</a>
 
 w17 1/2放假
 
-影片連結 : https://vimeo.com/198638361
+<a href="https://vimeo.com/198638361">影片</a>
 
-wiki比較詳細老師看這個就好 : https://github.com/s40523230/2016fallcp_hw/wiki/w18-%E6%9C%9F%E6%9C%AB
+<a href="https://github.com/s40523230/2016fallcp_hw/wiki/w18-%E6%9C%9F%E6%9C%AB">wiki比較詳細老師看這個就好</a>
