--- a/content/20170109-2.md
+++ b/content/20170109-2.md
@@ -20,7 +20,7 @@ brython(1);
 
 <!-- 以下實際利用  Brython 畫圖 -->
 
-<a href="https://s40523230.github.io/2016fallcp_hw/blog/w18-1.html">製作按鈕</a>
+<a href="https://s40523230.github.io/2016fallcp_hw/blog/w18-1.html">w15製作按鈕</a>
 
 
 
