--- a/content/20170109v3.md
+++ b/content/20170109v3.md
@@ -1,4 +1,4 @@
-Title: w18-2
+Title: 2016 fallcp 期末考週
 Date: 2016-12-26 12:00
 Category: Course
 Tags: Brython
@@ -17,6 +17,44 @@ window.onload=function(){
 brython(1);
 }
 </script>
+
+W15 製作按鈕
+
+<!-- 以下實際利用  Brython 畫圖 -->
+<script type="text/python3">
+from browser import document
+from browser import alert
+
+def get_input(ev):
+    the_input = input("請輸入")
+    alert("輸入為:"+str(the_input))
+    
+document['ch01'].bind('click',get_input)
+
+</script>
+
+<p><button id="ch01">取輸入後, 列印出來</button></p>
+
+<pre class="brush: python">
+
+<!-- 以下實際利用  Brython 畫圖 -->
+<script type="text/python3">
+from browser import document
+from browser import alert
+
+def get_input(ev):
+    the_input = input("請輸入")
+    alert("輸入為:"+str(the_input))
+    
+document['ch01'].bind('click',get_input)
+
+</script>
+
+<p><button id="ch01">取輸入後, 列印出來</button></p>
+
+</pre>
+
+W16 猜數字遊戲
 
 <!-- 以下實際利用  Brython 畫圖 -->
 <script type="text/python3">
@@ -75,3 +113,9 @@ document['ch02'].bind('click',two_input)
 <p><button id="ch02">猜數字</button></p>
 
 </pre>
+
+w17 1/2放假
+
+<a href="https://vimeo.com/198638361">影片</a>
+
+<a href="https://github.com/s40523230/2016fallcp_hw/wiki/w18-%E6%9C%9F%E6%9C%AB">wiki比較詳細老師看這個就好</a>
