--- a/content/20170109v3.md
+++ b/content/20170109v3.md
@@ -6,6 +6,12 @@ Author: 40523230
 
 <!-- PELICAN_END_SUMMARY -->
 
+<a href="https://vimeo.com/199539325">期末考影片-- vimeo</a>
+
+<a href="https://www.youtube.com/watch?v=h5T-hNhJ08k&feature=youtu.be">期末考影片-- youtube</a>
+
+<a href="https://github.com/s40523230/2016fallcp_hw/wiki/w18-%E6%9C%9F%E6%9C%AB">wiki比較詳細老師看這個就好</a>
+
 <!-- 導入 Brython 標準程式庫 -->
 <script type="text/javascript" 
     src="https://cdn.rawgit.com/brython-dev/brython/master/www/src/brython_dist.js">
@@ -115,7 +121,3 @@ document['ch02'].bind('click',two_input)
 </pre>
 
 w17 1/2放假
-
-<a href="https://vimeo.com/198638361">影片</a>
-
-<a href="https://github.com/s40523230/2016fallcp_hw/wiki/w18-%E6%9C%9F%E6%9C%AB">wiki比較詳細老師看這個就好</a>
